# backend

./: .gitignore  Dockerfile  Pipfile  Procfile  README.md  a.py  docker-compose.yml  google-drive-testing.json  newrelic.ini  pyproject.toml  requirements.txt
.github/workflows/: DeployMain.yml  DeployTesting.yml  heroku.yml
authenticate/: AuthHandler.py  apps.py  authbackend.py  authentication.py  models.py  permissions.py  urls.py  utils.py  views.py
authenticate/migrations/: 0001_initial.py
authenticator/: AuthHandler.py  authbackend.py  middleware.py
autocomplete/: TrieManager.py  urls.py  views.py
backend/: settings.py  urls.py
backend/migrations/: 0001_initial.py
club/: README.md  admin.py  models.py  permissions.py  serializers.py  serilaizers.py  urls.py  views.py
club/migrations/: 0001_initial.py  0002_alter_club_join_date.py  0002_alter_social_other.py  0002_auto_20210823_0935.py  0003_auto_20210806_2133.py  0003_competition_club.py  (+39 more)
connect/: __init__.py  admin.py  apps.py  connection_manager.py  email_templates.py  emailhandler.py  logger.py  models.py  permissions.py  serializer.py  serializers.py  signals.py  urls.py  views.py
dd/: py.py
docker/: docker-compose.override.yml  docker-compose.yml  env_file_app_template
ecell/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
form/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
rating/: rating.py  ratingHandler.py  urls.py  views.py
tmp/: AVL_frwsB2c.java  file.cpp
users/: models.py  serializers.py  urls.py  views.py
utils/: run.sh
(+72 files in other folders)
